// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests/fixtures.test.ts > type-declaration > literal-type1 1`] = `
ScopeManager {
  variables: Array [
    ImplicitGlobalConstTypeVariable,
    Variable$2 {
      defs: Array [
        TypeDefinition$1 {
          name: Identifier<"Color">,
          node: TSTypeAliasDeclaration$1,
        },
      ],
      name: "Color",
      references: Array [
        Reference$2 {
          identifier: Identifier<"Color">,
          isRead: true,
          isTypeReference: true,
          isValueReference: false,
          isWrite: false,
          resolved: Variable$2,
        },
      ],
      isValueVariable: false,
      isTypeVariable: true,
    },
    Variable$3 {
      defs: Array [
        TypeDefinition$2 {
          name: Identifier<"Quantity">,
          node: TSTypeAliasDeclaration$2,
        },
      ],
      name: "Quantity",
      references: Array [
        Reference$1 {
          identifier: Identifier<"Quantity">,
          isRead: true,
          isTypeReference: true,
          isValueReference: false,
          isWrite: false,
          resolved: Variable$3,
        },
      ],
      isValueVariable: false,
      isTypeVariable: true,
    },
    Variable$4 {
      defs: Array [
        TypeDefinition$3 {
          name: Identifier<"SeussFish">,
          node: TSTypeAliasDeclaration$3,
        },
      ],
      name: "SeussFish",
      references: Array [],
      isValueVariable: false,
      isTypeVariable: true,
    },
  ],
  scopes: Array [
    GlobalScope$1 {
      block: Program$4,
      isStrict: false,
      references: Array [
        Reference$1,
        Reference$2,
      ],
      set: Map {
        "const" => ImplicitGlobalConstTypeVariable,
        "Color" => Variable$2,
        "Quantity" => Variable$3,
        "SeussFish" => Variable$4,
      },
      type: "global",
      upper: null,
      variables: Array [
        ImplicitGlobalConstTypeVariable,
        Variable$2,
        Variable$3,
        Variable$4,
      ],
    },
  ],
}
`;

exports[`type-declaration literal-type1 1`] = `
ScopeManager {
  variables: [
    ImplicitGlobalConstTypeVariable,
    Variable$2 {
      defs: [
        TypeDefinition$1 {
          name: Identifier<"Color">,
          node: TSTypeAliasDeclaration$1,
        },
      ],
      name: "Color",
      references: [
        Reference$2 {
          identifier: Identifier<"Color">,
          isRead: true,
          isTypeReference: true,
          isValueReference: false,
          isWrite: false,
          resolved: Variable$2,
        },
      ],
      isValueVariable: false,
      isTypeVariable: true,
    },
    Variable$3 {
      defs: [
        TypeDefinition$2 {
          name: Identifier<"Quantity">,
          node: TSTypeAliasDeclaration$2,
        },
      ],
      name: "Quantity",
      references: [
        Reference$1 {
          identifier: Identifier<"Quantity">,
          isRead: true,
          isTypeReference: true,
          isValueReference: false,
          isWrite: false,
          resolved: Variable$3,
        },
      ],
      isValueVariable: false,
      isTypeVariable: true,
    },
    Variable$4 {
      defs: [
        TypeDefinition$3 {
          name: Identifier<"SeussFish">,
          node: TSTypeAliasDeclaration$3,
        },
      ],
      name: "SeussFish",
      references: [],
      isValueVariable: false,
      isTypeVariable: true,
    },
  ],
  scopes: [
    GlobalScope$1 {
      block: Program$4,
      isStrict: false,
      references: [
        Reference$1,
        Reference$2,
      ],
      set: Map {
        "const" => ImplicitGlobalConstTypeVariable,
        "Color" => Variable$2,
        "Quantity" => Variable$3,
        "SeussFish" => Variable$4,
      },
      type: "global",
      upper: null,
      variables: [
        ImplicitGlobalConstTypeVariable,
        Variable$2,
        Variable$3,
        Variable$4,
      ],
    },
  ],
}
`;
